# script-runner

./: .env.example  .gitignore  00_START_HERE.md  ADMIN_GUIDE.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_AUTH_GUIDE.md  GITHUB_SETUP.md  KILL_SWITCH_BACKEND_DOCS.md  LICENSE  Makefile  NOTIFICATION_SYSTEM_EXAMPLES.md  NOTIFICATION_SYSTEM_QUICKSTART.md  PORTABLE_BUILD.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES_TEMPLATE_PL.md  SCRIPTS_LOCATION.md  SETUP.md  START_MAC.command  TESTING.md  UPGRADE_GUIDE.md  build.bat  build.sh  index.html  package-lock.json  package.json  setup.bat  start-dev.bat  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  test.yml
examples/: data_processor.py  github_stats.py
python/: PLACEHOLDER.txt
scripts/: setup-scripts-push-token-secret.ps1  setup-windows-codesign-secrets.ps1
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  kill_switch_config_example.json  tauri.conf.json  tauri.release.conf.json
src-tauri/assets/: analyze_imports.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: PLACEHOLDER.txt
src-tauri/src/: admin_key.rs  analytics.rs  dependency_manager.rs  git_manager.rs  github_auth.rs  kill_switch.rs  kill_switch_manager.rs  main.rs  python_runner.rs  run_history.rs  script_encryption.rs  script_manager.rs  settings.rs
src/components/: AddScript.tsx  AdminDropzone.tsx  AdminKeyDiagnostics.tsx  AdminPanel.tsx  Analytics.tsx  DarkModeToggle.tsx  Dashboard.tsx  GenerateAdminKey.tsx  GitHubLogin.tsx  History.tsx  LogViewer.tsx  NotificationCenter.tsx  NotificationDemo.tsx  ScriptExecutor.tsx  ScriptList.tsx  SearchBox.tsx  Toast.tsx  UpdateNotification.tsx
(+6 files in other folders)
