[package]
name = "script-runner"
version = "0.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
git2 = { version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }
regex = "1.10"
walkdir = "2.4"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
dirs = "5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"

[[bin]]
name = "script-runner"
path = "src/main.rs"
