[package]
name = "script-runner"
version = "6.0.42"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
url = "2.5"
git2 = { version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }
regex = "1.10"
walkdir = "2.4"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
dirs = "5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
base64 = "0.21"
whoami = "1.4"
rusqlite = "0.30"
machine-uid = "0.3"

[[bin]]
name = "script-runner"
path = "src/main.rs"

